--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@ exp/
 __pycache__/
 .ipynb_checkpoints
 *.pyc
+losses/.uuid
+datasets/.uuid
+models/.uuid
+models/utils/.uuid
+runners/.uuid
+.idea/DPGEN-SIMPLE-master.iml
+.idea/misc.xml
+.idea/other.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/workspace.xml
+.idea/DPGEN-SIMPLE-master.iml
+.idea/DPGEN-SIMPLE-master.iml
+mnist_cls.pth
+.idea/DPGEN-SIMPLE-master.iml
+.gitignore
+.idea/workspace.xml
