--- a/configs/celeba.yml
+++ b/configs/celeba.yml
@@ -2,8 +2,8 @@ training:
   batch_size: 64
   queue_size: 60000
   n_epochs: 500000
-  n_iters: 300001
-  snapshot_freq: 5000
+  n_iters: 301201
+  snapshot_freq: 10
   sample_size: 9
   snapshot_sampling: true
   anneal_power: 2
@@ -24,7 +24,7 @@ sampling:
   inpainting: false
   interpolation: false
   n_interpolations: 15
-  private_attribute: attractive
+  private_attribute: smile
 
 fast_fid:
   batch_size: 1000
