--- a/configs/celeba.yml
+++ b/configs/celeba.yml
@@ -2,14 +2,14 @@ training:
   batch_size: 64
   queue_size: 60000
   n_epochs: 500000
-  n_iters: 301201
-  snapshot_freq: 10
+  n_iters: 300001
+  snapshot_freq: 5000
   sample_size: 9
   snapshot_sampling: true
   anneal_power: 2
   log_all_sigmas: false
   k: 64
-  epsilon: 10
+  epsilon: 1
 
 sampling:
   batch_size: 64
@@ -31,7 +31,7 @@ fast_fid:
   num_samples: 1000
   step_lr: 0.0000033
   n_steps_each: 5
-  begin_ckpt: 280000
+  begin_ckpt: 300000
   end_ckpt: 300000
   verbose: false
   ensemble: false
@@ -51,6 +51,7 @@ data:
   random_flip: true
   rescaled: false
   num_workers: 32
+  privacy_eval : True
 
 model:
   sigma_begin: 90
