--- a/configs/cub.yml
+++ b/configs/cub.yml
@@ -1,15 +1,15 @@
 training:
-  batch_size: 64 # for testing
+  batch_size: 64
   queue_size: 60000
   n_epochs: 500000
   n_iters: 300001
-  snapshot_freq: 5000
-  sample_size: 9 # what is sample size
+  snapshot_freq: 1000
+  sample_size: 9
   snapshot_sampling: true
   anneal_power: 2
   log_all_sigmas: false
-  k: 64 # for testing
-  epsilon: 1
+  k: 64
+  epsilon: 10
 
 sampling:
   batch_size: 64
