--- a/configs/lfw_people.yml
+++ b/configs/lfw_people.yml
@@ -3,7 +3,7 @@ training:
   queue_size: 60000
   n_epochs: 500000
   n_iters: 300001
-  snapshot_freq: 3000
+  snapshot_freq: 5000
   sample_size: 9
   snapshot_sampling: true
   anneal_power: 2
@@ -24,15 +24,15 @@ sampling:
   inpainting: false
   interpolation: false
   n_interpolations: 15
-  private_attribute: smile
+  private_attribute: attractive
 
 fast_fid:
   batch_size: 100
   num_samples: 1000
   step_lr: 0.0000033
   n_steps_each: 5
-  begin_ckpt: 250000
-  end_ckpt: 250000
+  begin_ckpt: 237000
+  end_ckpt: 237000
   verbose: true
   ensemble: false
 
@@ -42,7 +42,7 @@ test:
   batch_size: 100
 
 data:
-  dataset: "CELEBA"
+  dataset: "LFWPeople"
   image_size: 64
   channels: 3
   logit_transform: false
